feat: complete k8s config

--- a/cx-control-center-deployment.yaml
+++ b/cx-control-center-deployment.yaml
@@ -6,24 +6,24 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: cx-contol-center
-  replicas: 3
+      app: cx-control-center
+  replicas: 5
   strategy:
     type: Recreate
   template:
     metadata:
-       name: cx-contol-center
+       name: cx-control-center
        labels:
-         app: cx-contol-center
+         app: cx-control-center
     spec:
       containers:
-        - name: cx-contol-center
+        - name: cx-control-center
           image: registry.local.com/cx-control-center:latest
           imagePullPolicy: Always
-          resources:
-            limits:
-              cpu: "0.5"
-              memory: 512Mi
-            requests:
-              cpu: "0.5"
-              memory: 512Mi
+#          resources:
+#            limits:
+#              cpu: "0.25"
+#              memory: 64Mi
+#            requests:
+#              cpu: "0.25"
+#              memory: 64Mi
